--- a/src/app/pages/user-management/private-label/orderto-supplier/detail/orderto-supplier-detail.component.html
+++ b/src/app/pages/user-management/private-label/orderto-supplier/detail/orderto-supplier-detail.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Detail Pesanan'">
+  <page-content-header [contentTitle]="ls.locale.katalog_src.lihat_pesanan.text10">
   </page-content-header>
 
   <div *ngIf="onLoad" fxLayout="row" fxLayoutAlign="center center" class="pt-48">
@@ -10,7 +10,7 @@
     <div class="ayo-main-wrapper mat-white-bg p-0" fxLayout="column">
       <mat-progress-bar [color]="'primary'" [mode]="'indeterminate'" *ngIf="loadingIndicator"></mat-progress-bar>
       <mat-tab-group [selectedIndex]="selectedTab">
-        <mat-tab label="Detail Pemesanan">
+        <mat-tab label="{{ls.locale.katalog_src.lihat_pesanan.text10}}">
           <div class="ayo-middle p-24" fxLayout="column" fusePerfectScrollbar>
             <div class="pb-16" fxLayout="row" fxLayoutAlign="start center">
               <mat-icon class="m-0 mr-16 secondary-text">account_circle</mat-icon>
@@ -22,7 +22,7 @@
                 <thead>
                   <tr>
                     <th>{{ls.locale.global.label.name}}</th>
-                    <th>No Telepon / Nomor HP</th>
+                    <th>{{ls.locale.global.label.phone}}</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -44,7 +44,7 @@
               <table class="simple">
                 <thead>
                   <tr>
-                    <th>Alamat Pengiriman</th>
+                    <th>{{ls.locale.katalog_src.lihat_pesanan.text13}}</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -60,7 +60,7 @@
               <table class="simple">
                 <thead>
                   <tr>
-                    <th>Catatan</th>
+                    <th>{{ls.locale.global.label.note}}</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -74,15 +74,15 @@
             </div>
             <div class="pb-16" fxLayout="row" fxLayoutAlign="start center">
               <mat-icon class="m-0 mr-16 secondary-text">av_timer</mat-icon>
-              <div class="h2 secondary-text">Status Pemesanan</div>
+              <div class="h2 secondary-text">{{ls.locale.global.label.order_status}}</div>
             </div>
             <div class="customer">
               <table class="simple">
                 <thead>
                   <tr>
                     <th>Status</th>
-                    <th>Diperbarui pada</th>
-                    <th>Diperbarui oleh Staff</th>
+                    <th>{{ls.locale.global.label.updated_at_2}}</th>
+                    <th>{{ls.locale.global.label.updated_by_staff}}</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -96,7 +96,7 @@
                     <td class="w-600">{{item.name}}</td>
                   </tr>
                   <tr *ngIf="statusLogs.length == 0">
-                    <td colspan="3">Tidak ada data</td>
+                    <td colspan="3">{{ls.locale.pengaturan.force_update_apps.text12}}</td>
                   </tr>
                 </tbody>
               </table>
@@ -104,30 +104,29 @@
             <form class="update-status p-24" *ngIf="orderStatuses.length > 0" [formGroup]="statusForm" fxLayout="row"
               fxLayoutAlign="start center">
               <mat-form-field class="mr-16 is-light" fxFlex>
-                <mat-select formControlName="newStatus" placeholder="Pilih Status Pemesanan" required>
+                <mat-select formControlName="newStatus" placeholder="{{ls.locale.katalog_src.lihat_pesanan.text14}}" required>
                   <mat-option *ngFor="let status of orderStatuses" [value]="status.value">{{status.name}}</mat-option>
                 </mat-select>
               </mat-form-field>
 
               <button mat-raised-button class="mat-accent" (click)="updateStatus()"
-                [disabled]="statusForm.invalid">PERBARUI
-                STATUS</button>
+                [disabled]="statusForm.invalid">{{ls.locale.global.button.update_status}}</button>
             </form>
           </div>
         </mat-tab>
-        <mat-tab label="Produk Yang Dibeli">
+        <mat-tab label="{{ls.locale.katalog_src.lihat_pesanan.text21}}">
           <div class="ayo-middle p-24" fxLayout="column">
             <div class="products tab-content" fusePerfectScrollbar>
               <table class="simple">
                 <thead>
                   <tr>
-                    <th>No</th>
+                    <th>{{ls.locale.wholesaler.number}}</th>
                     <th></th>
-                    <th>Nama Produk</th>
-                    <th>Perusahaan</th>
-                    <th>Kategori</th>
-                    <th>Harga</th>
-                    <th style="text-align: center;">Jumlah</th>
+                    <th>{{ls.locale.katalog_src.produk.text15}}</th>
+                    <th>{{ls.locale.produk_prinsipal.text2}} </th>
+                    <th>{{ls.locale.global.label.category}}</th>
+                    <th>{{ls.locale.global.label.price}}</th>
+                    <th style="text-align: center;">{{ls.locale.global.label.amount}}</th>
                   </tr>
                 </thead>
                 <tbody [formGroup]="productsForm">
@@ -163,11 +162,11 @@
                       <div class="button-row" align="center">
                         <button mat-icon-button *ngIf="!product.get('editable').value" (click)="updateQty(i)">
                           <mat-icon>edit</mat-icon>
-                          <span class="pl-8" style="font-size: .8em">Ubah</span>
+                          <span class="pl-8" style="font-size: .8em">{{ls.locale.global.button.edit}}</span>
                         </button>
                         <button mat-icon-button *ngIf="product.get('editable').value" (click)="setQty(i);">
                           <mat-icon>save</mat-icon>
-                          <span class="pl-8" style="font-size: .8em">Simpan</span>
+                          <span class="pl-8" style="font-size: .8em">{{ls.locale.global.button.save}}</span>
                         </button>
                       </div>
                     </td>
@@ -181,20 +180,20 @@
                 </button>
                 <button mat-raised-button *ngIf="showRedBG(detailOrder.status) && isAnyUpdate > -1" fxFlex="20"
                   (click)="updateAllPrice()" style="margin-left: 10px;">
-                  PERBARUI SEMUA HARGA
+                  {{(ls.locale.katalog_src.lihat_pesanan.update_all_price) ? ls.locale.katalog_src.lihat_pesanan.update_all_price : 'PERBARUI SEMUA HARGA'}}
                 </button>
               </div>
             </div>
           </div>
         </mat-tab>
-        <mat-tab label="Nota">
+        <mat-tab label="{{ls.locale.global.label.shopping_note}}">
           <div id="invoice" class="ayo-main-wrapper modern page-layout blank" fxLayout="row" fusePerfectScrollbar>
             <div class="invoice-container" fxFlex="100" fxLayout="column">
               <div class="px-24 py-16">
                 <div class="button" (click)="print()">
                   <div fxLayout="row wrap" fxLayoutAlign="space-between center">
                     <mat-icon class="secondary-text">print</mat-icon>
-                    <span class="h3 pr-48">CETAK</span>
+                    <span class="h3 pr-48">{{ls.locale.global.label.print}}</span>
                   </div>
                 </div>
               </div>
@@ -204,8 +203,7 @@
                   fxLayoutGap.lt-md="0px">
                   <div fxFlex="90" class="py-16 pr-16">
                     <div class="text-center">
-                      <div style="font-size: 20px; font-weight: 600; text-decoration: underline;">Detail
-                        Pemesanan/Preorder</div>
+                      <div style="font-size: 20px; font-weight: 600; text-decoration: underline;">{{ls.locale.katalog_src.lihat_pesanan.text10}} / Preorder</div>
                       <div class="py-8" fxFlex="100" fxLayout="row" fxLayoutAlign="center center">
                         <span>{{detailOrder?.invoice_number}}</span>
                       </div>
@@ -242,17 +240,17 @@
                     </div> -->
                     <div class="detail-order3">
                       <div class="" fxFlex="100" fxLayout="row" fxLayoutAlign="start center">
-                        <span fxFlex="50" class="text-left" style="font-weight: 600;">Total Pesanan</span>
+                        <span fxFlex="50" class="text-left" style="font-weight: 600;">{{ls.locale.produk_prinsipal.text25}}</span>
                         <span fxFlex="50" class="text-right">Rp {{total |
                           rupiahFormaterWithoutRp}}</span>
                       </div>
                       <div class="" fxFlex="100" fxLayout="row" fxLayoutAlign="start center">
-                        <span fxFlex="50" class="text-left" style="font-weight: 600;">Biaya Pengiriman</span>
+                        <span fxFlex="50" class="text-left" style="font-weight: 600;">{{ls.locale.katalog_src.lihat_pesanan.text19}}</span>
                         <span fxFlex="50" class="text-right">Rp {{delivery_cost |
                           rupiahFormaterWithoutRp}}</span>
                       </div>
                       <div class="" fxFlex="100" fxLayout="row" fxLayoutAlign="start center">
-                        <span fxFlex="50" class="text-left" style="font-weight: 600;">Voucher Belanja</span>
+                        <span fxFlex="50" class="text-left" style="font-weight: 600;">{{ls.locale.katalog_src.lihat_pesanan.shopping_voucher}}</span>
                         <span fxFlex="50" class="text-right" style="color: red;">-Rp {{totalDiscount |
                           rupiahFormaterWithoutRp}}</span>
                       </div>
@@ -260,8 +258,7 @@
                     <hr>
                     <div style="font-size:18px">
                       <div class="" fxFlex="100" fxLayout="row" fxLayoutAlign="start center">
-                        <span fxFlex="50" class="text-left" style="font-weight: 600;">Total Nilai
-                          Pemesanan/Preorder</span>
+                        <span fxFlex="50" class="text-left" style="font-weight: 600;">{{ls.locale.katalog_src.lihat_pesanan.total_order_value}}/Preorder</span>
                         <span fxFlex="50" class="text-right" style="font-size: 18px; font-weight: 600;">Rp {{total -
                           totalDiscount + delivery_cost |
                           rupiahFormaterWithoutRp}}</span>
