--- a/src/app/pages/user-management/private-label/user-supplier/edit/user-supplier-edit.component.html
+++ b/src/app/pages/user-management/private-label/user-supplier/edit/user-supplier-edit.component.html
@@ -1,11 +1,11 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Buat User'">
+  <page-content-header [contentTitle]="ls.locale.produk_prinsipal.text8">
   </page-content-header>
   <!-- / HEADER -->
   <div class="content p-24">
     <div fxLayout="row" class="p-24 bb" fxLayoutAlign="space-between center">
-      <h2 class="m-0">{{ isDetail? 'Detail' : 'Edit' }} User Perusahaan</h2>
+      <h2 class="m-0">{{ isDetail? 'Detail' : 'Edit' }} {{ls.locale.produk_prinsipal.text6}}</h2>
       <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="10px">
         <mat-label>Status:</mat-label>
         <mat-form-field class="orders dropdown" [class]="userSupplierStatusSelected == 'active'? 'orders status-active' : userSupplierStatusSelected == 'inactive'? 'orders status-nonactive': 'orders status-active'" fxLayout="row" fxLayoutAlign="center center">
@@ -23,14 +23,14 @@
       <mat-vertical-stepper class="mat-elevation-z4" [linear]="false">
         <mat-step [stepControl]="verticalStepperStep1">
           <form [formGroup]="verticalStepperStep1">
-            <ng-template matStepLabel>Informasi Dasar</ng-template>
+            <ng-template matStepLabel>{{ls.locale.admin_principal.text1}}</ng-template>
             <div fxFlex="1 0 auto" fxLayout="column">
               <mat-form-field fxFlex="100" class="is-light">
                 <input matInput type="text" placeholder="{{ls.locale.global.label.name}}" formControlName="nama" *ngIf="!isDetail">
                 <input matInput type="text" placeholder="{{ls.locale.global.label.name}}" formControlName="nama" readonly *ngIf="isDetail">
                 <mat-error
                   *ngIf="verticalStepperStep1.controls['nama'].hasError('required') && verticalStepperStep1.controls['nama'].touched ">
-                  Nama harus diisi.
+                  {{ls.locale.global.label.name}} {{ls.locale.global.messages.mandatory_text}}
                 </mat-error>
               </mat-form-field>
 
@@ -39,27 +39,27 @@
                 <input matInput type="text" placeholder="Username" formControlName="username" readonly *ngIf="isDetail">
                 <mat-error
                   *ngIf="verticalStepperStep1.controls['username'].hasError('required') && verticalStepperStep1.controls['username'].touched ">
-                  Username harus diisi.
+                  Username {{ls.locale.global.messages.mandatory_text}}
                 </mat-error>
               </mat-form-field>
 
               <mat-form-field fxFlex="100" class="is-light">
-                <input matInput type="email" placeholder="Alamat Email" formControlName="email" *ngIf="!isDetail">
-                <input matInput type="email" placeholder="Alamat Email" formControlName="email" readonly *ngIf="isDetail">
+                <input matInput type="email" placeholder="{{ls.locale.global.label.email}}" formControlName="email" *ngIf="!isDetail">
+                <input matInput type="email" placeholder="{{ls.locale.global.label.email}}" formControlName="email" readonly *ngIf="isDetail">
                 <mat-error
                   *ngIf="verticalStepperStep1.controls['email'].hasError('required') && verticalStepperStep1.controls['email'].touched ">
-                  Alamat email harus diisi.
+                  {{ls.locale.global.label.email}} {{ls.locale.global.messages.mandatory_text}}
                 </mat-error>
                 <mat-error
                   *ngIf="verticalStepperStep1.get('email').errors?.email && verticalStepperStep1.controls['email'].touched ">
-                  Email tidak dapat divalidasi
+                  Email invalid
                 </mat-error>
               </mat-form-field>
             </div>
 
             <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
               <button mat-raised-button matStepperNext (click)="step1()" type="button" class="confirmation-button">
-                Lanjut
+                {{ls.locale.global.button.next}}
               </button>
             </div>
           </form>
@@ -70,23 +70,23 @@
             <ng-template matStepLabel>{{ls.locale.produk_prinsipal.text4}}</ng-template>
             <div fxFlex="1 0 auto" fxLayout="column">
               <mat-form-field>
-                <mat-label>Perusahaan</mat-label>
-                <mat-select placeholder="Perusahaan" formControlName="supplierCompany" *ngIf="!isDetail">
+                <mat-label>{{ls.locale.produk_prinsipal.text2}}</mat-label>
+                <mat-select placeholder="{{ls.locale.produk_prinsipal.text2}}" formControlName="supplierCompany" *ngIf="!isDetail">
                   <mat-option [value]="item.id" *ngFor="let item of supplierCompanyList">{{item.name}}</mat-option>
                 </mat-select>
-                <mat-select placeholder="Perusahaan" formControlName="supplierCompany" [disabled]="true" *ngIf="isDetail">
+                <mat-select placeholder="{{ls.locale.produk_prinsipal.text2}}" formControlName="supplierCompany" [disabled]="true" *ngIf="isDetail">
                   <mat-option [value]="item.id" *ngFor="let item of supplierCompanyList">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error
                   *ngIf="verticalStepperStep2.controls['supplierCompany'].hasError('required') && verticalStepperStep2.controls['supplierCompany'].touched">
-                  Perusahaan harus diisi
+                  {{ls.locale.produk_prinsipal.text2}} {{ls.locale.global.messages.mandatory_text}}
                 </mat-error>
               </mat-form-field>
             </div>
 
             <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
               <button mat-raised-button matStepperNext (click)="step2()" type="button" class="confirmation-button">
-                Lanjut
+                {{ls.locale.global.button.next}}
               </button>
             </div>
           </form>
@@ -96,26 +96,26 @@
 
           <form [formGroup]="verticalStepperStep3">
 
-            <ng-template matStepLabel>Level Akses Peran</ng-template>
+            <ng-template matStepLabel>{{ls.locale.admin_principal.text2}}</ng-template>
 
             <div fxFlex="1 0 auto" fxLayout="column">
               <mat-form-field fxFlex="100" class="is-light">
-                <mat-select placeholder="User Perusahaan" formControlName="role" *ngIf="!isDetail">
+                <mat-select placeholder="{{ls.locale.produk_prinsipal.text6}}" formControlName="role" *ngIf="!isDetail">
                   <mat-option *ngFor="let item of listRole" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
-                <mat-select placeholder="User Perusahaan" formControlName="role" [disabled]="true" *ngIf="isDetail">
+                <mat-select placeholder="{{ls.locale.produk_prinsipal.text6}}" formControlName="role" [disabled]="true" *ngIf="isDetail">
                   <mat-option *ngFor="let item of listRole" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error
                   *ngIf="verticalStepperStep3.controls['role'].hasError('required') && verticalStepperStep3.controls['role'].touched">
-                  Role harus diisi
+                  {{ls.locale.produk_prinsipal.text6}} {{ls.locale.global.messages.mandatory_text}}
                 </mat-error>
               </mat-form-field>
             </div>
 
             <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
               <button mat-raised-button matStepperNext (click)="step2()" type="button" class="confirmation-button">
-                Lanjut
+                {{ls.locale.global.button.next}}
               </button>
             </div>
 
@@ -125,19 +125,19 @@
 
         <mat-step *ngIf="!isDetail">
 
-          <ng-template matStepLabel *ngIf="!isDetail">Selesai</ng-template>
+          <ng-template matStepLabel *ngIf="!isDetail">{{ls.locale.global.button.finish}}</ng-template>
 
           <div class="h2" fxLayout="row" fxLayoutAlign="center center" *ngIf="!isDetail">
-            Apakah anda yakin untuk menyelesaikan isian ini ?
+            {{ls.locale.paguyuban.text5}}
           </div>
 
           <div class="pt-24" fxLayout="row" fxLayoutAlign="start center" *ngIf="!isDetail">
             <button class="mr-8" mat-stroked-button matStepperPrevious type="button" color="accent">
-              Kembali
+              {{ls.locale.global.button.back}}
             </button>
             <button mat-raised-button type="button" class="confirmation-button" (click)="onSave()">
               <ng-container *ngIf="isLoadingSave == false">
-                Selesai
+                {{ls.locale.global.button.finish}}
               </ng-container>
               <ng-container *ngIf="isLoadingSave == true">
                 <mat-progress-spinner mode="indeterminate" diameter="32" style="margin:0 auto;"></mat-progress-spinner>
