Added type to payload of banner import

--- a/src/app/pages/inapp-marketing/banner/import-audience-banner-dialog/import-audience-banner-dialog.component.html
+++ b/src/app/pages/inapp-marketing/banner/import-audience-banner-dialog/import-audience-banner-dialog.component.html
@@ -5,7 +5,7 @@
     <div fxFlex fxLayout="row" fxLayoutAlign="space-between center">
 
       <div fxFlex fxLayout="row" fxLayoutAlign="start center">
-        <span>{{ls.locale.global.label.upload_file}} XLS</span>
+        <span>fgh XLS</span>
       </div>
 
     </div>
